# Alloc-N-Buffer

./: AGENTS.md  Alloc-N-Buffer.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md
cmake/: allocnbufferConfig.cmake.in
docs/: annotated.html  annotated_dup.js  blob_8h.html  blob_8h.js  blob_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  fifoslab_8h.html  fifoslab_8h.js  fifoslab_8h_source.html  files.html  globals.html  globals_func.html  globals_type.html  group__ANB__Blob.html  group__ANB__Blob.js  group__ANB__FifoSlab.html  group__ANB__Slab.html  group__ANB__Slab.js  index.html  md_Alloc-N-Buffer.html  navtreedata.js  navtreeindex0.js  pages.html  slab_8h.html  slab_8h.js  slab_8h_source.html  structANB__Blob.html  structANB__FifoSlab.html  structANB__FifoSlabIter.html  structANB__Slab.html  structANB__SlabIter.html  topics.html  topics.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  files_0.js  files_1.js  functions_0.js  groups_0.js  pages_0.js  pages_1.js  pages_2.js  pages_5.js  pages_7.js  pages_8.js  pages_a.js  pages_b.js  searchdata.js  typedefs_0.js
fuzz/: fuzz_fifoslab.c  fuzz_slab.c  run_fuzz_fifoslab.sh  run_fuzz_slab.sh
include/: blob.h  fifoslab.h  slab.h
src/: blob.c  fifoslab.c  slab.c
tests/: test_blob.c  test_fifoslab.c  test_slab.c
